--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,11 @@ dependencies {
     // https://mvnrepository.com/artifact/com.github.sps.pushover.net/pushover-client
     implementation group: 'com.github.sps.pushover.net', name: 'pushover-client', version: '1.0.0'
 
+    //Moshi
     implementation "com.squareup.moshi:moshi:$moshiVersion"
+
+    //Tinkoff
+    implementation "ru.tinkoff.decoro:decoro:1.1.1"
 
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
