--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
@@ -61,6 +66,9 @@ dependencies {
 
     def retrofit2_version = "2.5.0"
     def moshiVersion = "1.8.0"
+
+    //okhttp3
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
     // https://mvnrepository.com/artifact/com.github.sps.pushover.net/pushover-client
     implementation group: 'com.github.sps.pushover.net', name: 'pushover-client', version: '1.0.0'
