--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,17 +70,25 @@ dependencies {
     //okhttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
+    //Anko
+     implementation "org.jetbrains.anko:anko:0.10.8"
+
+
+    //material design components
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
     // https://mvnrepository.com/artifact/com.github.sps.pushover.net/pushover-client
     implementation group: 'com.github.sps.pushover.net', name: 'pushover-client', version: '1.0.0'
 
     //Moshi
     implementation "com.squareup.moshi:moshi:$moshiVersion"
 
-    //Tinkoff
+    //decoro
     implementation "ru.tinkoff.decoro:decoro:1.1.1"
 
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation 'com.google.android.material:material:1.0.0'
 }
