--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     def moshiVersion = "1.8.0"
 
     //okhttp3
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
 
     //Anko
      implementation "org.jetbrains.anko:anko:0.10.8"
@@ -84,7 +84,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshiVersion"
 
     //decoro
-    implementation "ru.tinkoff.decoro:decoro:1.1.1"
+    implementation "ru.tinkoff.decoro:decoro:1.3.5"
 
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
@@ -93,4 +93,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
+
+    ///cardView
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
 }
