--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,12 @@ dependencies {
     //Anko
      implementation "org.jetbrains.anko:anko:0.10.8"
 
+    //Dagger2
+    api 'com.google.dagger:dagger:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
+    api 'com.google.dagger:dagger-android:2.23.2'
+    api 'com.google.dagger:dagger-android-support:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
 
     //material design components
     implementation 'com.google.android.material:material:1.2.0-alpha02'
