--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.github.sps.pushover.net/pushover-client
     implementation group: 'com.github.sps.pushover.net', name: 'pushover-client', version: '1.0.0'
 
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     //Moshi
     implementation "com.squareup.moshi:moshi:$moshiVersion"
 
