--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.example.notificationapp.NotificationApp"
+        android:name="com.example.notificationapp.App"
         android:allowBackup="true"
         android:icon="@mipmap/flower"
         android:label="@string/app_name"
