--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,28 +79,21 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation "androidx.work:work-runtime-ktx:2.2.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    def retrofit2_version = "2.6.0"
-    def moshiVersion = "1.8.0"
+    def retrofit2_version = '2.7.1'
+    def moshiVersion = '1.9.2'
 
     //okhttp3
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.0'
 
     //Anko
      implementation "org.jetbrains.anko:anko:0.10.8"
 
-    //Dagger2
-    api 'com.google.dagger:dagger:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
-    api 'com.google.dagger:dagger-android:2.23.2'
-    api 'com.google.dagger:dagger-android-support:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
-
     //material design components
-    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
 
     // https://mvnrepository.com/artifact/com.github.sps.pushover.net/pushover-client
     implementation group: 'com.github.sps.pushover.net', name: 'pushover-client', version: '1.0.0'
@@ -129,9 +122,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
 
     //Room
-    implementation "androidx.room:room-runtime:2.2.2"
-    implementation "androidx.room:room-ktx:2.2.2"
-    kapt 'androidx.room:room-compiler:2.2.2'
+    implementation 'androidx.room:room-runtime:2.2.3'
+    implementation 'androidx.room:room-ktx:2.2.3'
+    kapt 'androidx.room:room-compiler:2.2.3'
 
     ///cardView
     implementation 'androidx.cardview:cardview:1.0.0'
